fix: more contrast for icons (#5646)

--- a/packages/frontend/src/components/AccountListSidebar/styles.module.scss
+++ b/packages/frontend/src/components/AccountListSidebar/styles.module.scss
@@ -39,6 +39,8 @@
 
 .accountListSidebar {
   --accountSidebarBg: #2c2c2c;
+  --accountSidebarIconColor: #bcbcbc;
+  --accountSidebarIconColorHover: #efefef;
 
   background-color: var(--accountSidebarBg);
   display: flex;
@@ -182,12 +184,10 @@
   }
 
   .addButton {
-    --add-button-color: #808080;
-
     background: none;
     border-radius: 10%;
-    border: 1.3pt solid var(--add-button-color);
-    color: var(--add-button-color);
+    border: 1.3pt solid var(--accountSidebarIconColor);
+    color: var(--accountSidebarIconColor);
     font-size: 22px;
     margin-bottom: var(--als-avatar-margin);
     margin-top: var(--als-avatar-margin);
@@ -196,7 +196,27 @@
 
     &:hover {
       color: var(--accountSidebarBg);
-      background: var(--add-button-color);
+      background: var(--accountSidebarIconColorHover);
+      opacity: 0.7;
+    }
+  }
+
+  .settingsButton {
+    background-color: transparent;
+    border: 0;
+    height: 42px;
+    margin: 0;
+    padding: 0;
+    width: 42px;
+
+    .settingsButtonIcon {
+      background-color: var(--accountSidebarIconColor);
+    }
+
+    &:hover {
+      .settingsButtonIcon {
+        background-color: var(--accountSidebarIconColorHover);
+      }
     }
   }
 }
@@ -212,25 +232,6 @@
   display: flex;
   flex-direction: column;
   padding: 8px 0;
-}
-
-.settingsButton {
-  background-color: transparent;
-  border: 0;
-  height: 42px;
-  margin: 0;
-  padding: 0;
-  width: 42px;
-
-  &:hover {
-    .settingsButtonIcon {
-      background-color: lightgray;
-    }
-  }
-}
-
-.settingsButtonIcon {
-  background-color: gray;
 }
 
 .accountBadge {
