--- a/packages/frontend/src/components/Dialog/styles.module.scss
+++ b/packages/frontend/src/components/Dialog/styles.module.scss
@@ -125,7 +125,7 @@ $paddingVertical: 20px;
 }
 
 .headerButtonIcon {
-  background-color: var(--bp4DialogHeaderIcon);
+  background-color: var(--iconColorPrimary);
   margin: 0 !important;
 }
 
