--- a/packages/frontend/src/components/Settings/styles.module.scss
+++ b/packages/frontend/src/components/Settings/styles.module.scss
@@ -80,10 +80,6 @@ $settingsHeight: 40px;
   text-align: start;
 }
 
-.settingsIcon {
-  background-color: var(--settingsIconColor);
-}
-
 .settingsSelector {
   @include mixins.button-reset;
   width: 100%;
