--- a/packages/frontend/scss/misc/_context_menu.scss
+++ b/packages/frontend/scss/misc/_context_menu.scss
@@ -63,7 +63,7 @@
     justify-content: flex-start;
 
     & .left-icon {
-      background-color: var(--iconBackground);
+      background-color: var(--iconColorPrimary);
       margin: 0 5px 0 0;
     }
 
